0026514: OSD_Path can not work with French symbols in file name.

Restriction on path to contain only basic ASCII symbols is removed in OSD_Path, to allow paths to contain any symbols (defined in UTF-8 encoding).