src/OSD/OSD_Path.cxx
@@ -408,21 +408,8 @@ void OSD_Path::SetValues(const TCollection_AsciiString& Nod,
                          const TCollection_AsciiString& Dsk,
                          const TCollection_AsciiString& Trk,
                          const TCollection_AsciiString& Nam,
-                         const TCollection_AsciiString& ext){
-
- if (!Nod.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : Node");
- if (!UsrNm.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : User Name");
- if (!Dsk.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : Disk");
- if (!Trk.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : Trek");
- if (!Nam.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : Name");
- if (!ext.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetValues argument : Extension");
-
+                         const TCollection_AsciiString& ext)
+{
  myNode = Nod;
  myUserName = UsrNm;
  myPassword = Passwd;
@@ -836,8 +823,6 @@ TCollection_AsciiString OSD_Path::Name()const{
 
 
 void OSD_Path::SetNode(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetNode bad name");
  myNode = aName;
 }
 
@@ -845,8 +830,6 @@ void OSD_Path::SetNode(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetUserName(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetUserName bad name");
  myUserName = aName;
 }
 
@@ -854,8 +837,6 @@ void OSD_Path::SetUserName(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetPassword(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetPassword bad name");
   myPassword = aName;
 }
 
@@ -863,8 +844,6 @@ void OSD_Path::SetPassword(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetDisk(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetDisk bad name");
   myDisk = aName;
 }
 
@@ -872,8 +851,6 @@ void OSD_Path::SetDisk(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetTrek(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetTrek bad name");
   myTrek = aName;
 }
 
@@ -881,8 +858,6 @@ void OSD_Path::SetTrek(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetName(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetName bad name");
   myName = aName;
 }
 
@@ -890,8 +865,6 @@ void OSD_Path::SetName(const TCollection_AsciiString& aName){
 
 
 void OSD_Path::SetExtension(const TCollection_AsciiString& aName){
- if (!aName.IsAscii())
-  Standard_ConstructionError::Raise("OSD_Path::SetExtension bad name");
   myExtension = aName;
 }
 
